# xrlib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  project_config.h.in  win_dll_metadata.rc
.github/: FUNDING.yml
.github/workflows/: _src_android_builds.yml  _src_desktop_builds.yml  all_platforms.yml  android_builds.yml  android_releases.yml  desktop_builds.yml  desktop_releases.yml  no_xrvk.yml  ubuntu_builds.yml  windows_builds.yml
include/: project_config.h  xrlib.hpp
include/xrlib/: common.hpp  data_types.hpp  data_types_bitmasks.hpp  input.hpp  instance.hpp  interaction_profiles.hpp  log.hpp  session.hpp  thread_pool.hpp  utility_functions.hpp  vulkan.hpp
include/xrlib/ext/: EXT_hand_tracking.hpp  ext_base.hpp  ext_base_passthrough.hpp
include/xrlib/ext/EXT/: hand_tracking.hpp
include/xrlib/ext/FB/: display_refresh_rate.hpp  passthrough.hpp  triangle_mesh.hpp
include/xrlib/ext/KHR/: visibility_mask.hpp
include/xrvk/: buffer.hpp  descriptors.hpp  gltf.hpp  lighting.hpp  mesh.hpp  primitive.hpp  render.hpp  renderables.hpp  renderdoc_api.h  texture.hpp  vkutils.hpp
res/models/src/: plane.blend
res/shaders/: compile_shaders.bat
res/shaders/src/: mesh_flat.frag  mesh_flat.vert  mesh_pbr.frag  mesh_pbr.vert  mesh_pbr_floor.frag  mesh_pbr_sky.frag  primitive.frag  primitive.vert  stencil.frag  stencil0.vert  stencil1.vert  tonemaps.glsl
src/: input.cpp  instance.cpp  interaction_profiles.cpp  session.cpp  thread_pool.cpp  vulkan.cpp
src/ext/: EXT_hand_tracking.cpp
src/ext/EXT/: hand_tracking.cpp
src/ext/FB/: display_refresh_rate.cpp  passthrough.cpp  triangle_mesh.cpp
src/ext/KHR/: visibility_mask.cpp
src/xrvk/: buffer.cpp  descriptors.cpp  gltf.cpp  mesh.cpp  primitive.cpp  render.cpp  renderables.cpp  texture.cpp  vkutils.cpp
